--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
@@ -22,9 +23,10 @@ flutter:
   uses-material-design: true
 
   assets:
-    - lib/assets/background.png
+    - assets/background.png
+    - assets/videos/cyber_intro.mp4
 
   fonts:
     - family: DotMatrix
       fonts:
-        - asset: lib/assets/DOTMATRI.TTF # noinspection YAMLSchemaValidation
+        - asset: assets/DOTMATRI.TTF # noinspection YAMLSchemaValidation
